--- a/assets/css/iphone.css
+++ b/assets/css/iphone.css
@@ -106,6 +106,89 @@
     padding-right: 8px;
 }
 
+.hd-taikhoan.open{
+    display: flex;
+}
+
+.hd-taikhoan{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.container-taikhoan{
+    width: 500px;
+    padding: 16px 32px;
+    text-align: center;
+    border-radius: 15px;
+    position: relative;
+    background-color: #fff;
+}
+
+.taikhoan-title{
+    font-size: 16px;
+    color: #7bcfff;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.taikhoan-close{
+    width: 36px;
+    color: #ccc;
+    font-size: 24px;
+    top: 0;
+    right: 0;
+    position: absolute;
+    cursor: pointer;
+}
+
+.taikhoan-close:hover{
+    color: #888;
+}
+
+.input-password{
+    margin: 8px 0;
+    text-align: right;
+}
+
+.input-password input{
+    margin-bottom: 4px;
+}
+
+.container-taikhoan .input-submit{
+    font-size: 16px;
+    background-color: #7bcfff;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.container-taikhoan .input-submit:hover{
+    opacity: 0.8;
+}
+
+.login-another-method{
+    font-size: 16px;
+}
+
+.login-another-method button{
+    padding: 8px;
+}
+
+.btn-login-gg{
+    margin-bottom: 8px;
+}
+
+.btn-login-gg img{
+    width: 20px;
+}
+
 .hd-bot{
     height: 40px;
     background-color: #7bcfff;
@@ -268,28 +351,44 @@
 }
 
 .slider {
-    position: relative;
+    /* position: relative;
     text-align: center;
     pointer-events: none;
     min-height: 390px;
     margin-bottom: 10px;
-    padding-top: 500px;
+    padding-top: 500px; */
+    margin: 60px 0;
 }
 
-.slider img {
-    position: absolute;
+.slider .item img {
+    /* position: absolute;
     top: 50%;
     left: 50%;
     width: auto;
     height: 73%;
     -webkit-transform: translate(-50%, -48%);
     -ms-transform: translate(-50%, -48%);
-    transform: translate(-50%, -48%)
+    transform: translate(-50%, -48%) */
+    width: 328px;
+    margin-bottom: 60px !important;
+
+}
+
+/* Carousel */
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    margin: auto;
+    cursor: pointer;
+}
+
+#carousel-inner{
+    width: 585px;
 }
 
 .promo-box {
     position: absolute;
-    height: calc(100% - 20px);
+    height: calc(100% - 500px);
     width: 100%;
     z-index: 2;
     top: 0;
